# MLOps-Lab3

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: CICD.yml
api/: api.py
cli/: cli.py
mylib/: __init__.py  dataset.py  inference.py  models.py  operations.py
results/: model.onnx
scripts/: prepare_dataset.py  select_best_model.py  train.py
templates/: home.html
tests/: test_cli.py  test_fastapi.py  test_inference.py  test_logic.py
